# 2dgloids

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
Glitter/Headers/: glitter.hpp
Glitter/Shaders/: boid_force.vert  entity.frag  entity.vert
Glitter/Sources/: Boid.cpp  Boid.h  EntityRenderer.cpp  EntityRenderer.h  GridBin.cpp  GridBin.hpp  QuadTree.cpp  QuadTree.hpp  State.cpp  State.h  compute_forces.h  compute_forces.ispc  ispc_query.h  ispc_query.ispc  main.cpp  resourcemanager.cpp  resourcemanager.h  shader.cpp  shader.h
